Ticket #14860 (closed defect: fixed)

Opened 6 months ago

Last modified 6 months ago

safearray.cpp missing guard for wxUSE_OLE == 0

Reported by: staticinline Owned by:
Priority: normal Milestone: 2.9.5
Component: wxMSW Version: 2.9-svn
Keywords: Cc:
Blocked By: Patch: yes
Blocking:

Description

The guard "#if wxUSE_OLE && wxUSE_VARIANT" in safearray.h should also exist in safearray.cpp. Otherwise, safearray.cpp won't compile when wxUSE_OLE is 0. The attached patch fixes this. Other src/msw/ole/*.cpp files already do this type of thing.

Note: safearray.cpp was recently added (r72543, 2012-09-23).

Attachments

safearray.patch download (431 bytes) - added by staticinline 6 months ago.
patch to safearray.cpp

Change History

Changed 6 months ago by staticinline

patch to safearray.cpp

Changed 6 months ago by VZ

  • status changed from new to closed
  • resolution set to fixed

(In [73049]) Add missing wxUSE_OLE checks to safearray.cpp.

Fix compilation with wxUSE_OLE==0.

Closes #14860.

Note: See TracTickets for help on using tickets.