Add missing wxUSE_OLE checks to safearray.cpp.

Fix compilation with wxUSE_OLE==0.

Closes #14860.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@73049 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775